--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,9 +1,19 @@
 <%- include("partials/header") -%>
 
 <h1>Compose</h1>
-<form action="/" method="post">
-    <input type="text" name="compose" id="compose">
-    <button type="submit" name="button">Publish</button>
+<form action="/compose" method="post">
+
+    <div class="form-group">
+        <label>Title:</label>
+        <input type="text" class="form-control" name="postTitle">
+    </div>
+
+    <div class="form-group">
+        <label>Post:</label>
+        <textarea class="form-control" rows="5" name="postContent"></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Primary</button>
 </form>
 
 
