--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,11 @@
 <p><%= homeContent %></p>
 
 <% posts.forEach(function(post) { %>
-<h1><%= post.title %></h1>
-<p><%= post.content %></p>
+<h1><%= post.title%></h1>
+<p>
+    <%= post.content.substring(0, 100) + "..." %>
+    <a href="/posts/<%= post.title %>">Read More</a>
+</p>
 <% }) %>
 
 <%- include("partials/footer") -%>
